criando os quadrados

--- a/index.html
+++ b/index.html
@@ -15,3 +15,9 @@
         <div class="circulo-2 base-circulo"></div>
         <div class="circulo-3 base-circulo"></div>
     </div>
+    <div class="caixa-do-quadrado">
+        <div class="quadrado-1 base-quadrado"></div>
+        <div class="quadrado-2 base-quadrado"></div>
+        <div class="quadrado-3 base-quadrado"></div>
+    </div>
+</body>
