criando as gotas

--- a/index.html
+++ b/index.html
@@ -20,4 +20,9 @@
         <div class="quadrado-2 base-quadrado"></div>
         <div class="quadrado-3 base-quadrado"></div>
     </div>
+    <div class="caixa-da-gota">
+        <div class="gota-1 base-gota"></div>
+        <div class="gota-2 base-gota"></div>
+        <div class="gota-3 base-gota"></div>
+    </div>
 </body>
