criando os palitos

--- a/index.html
+++ b/index.html
@@ -25,4 +25,14 @@
         <div class="gota-2 base-gota"></div>
         <div class="gota-3 base-gota"></div>
     </div>
+    <div class="caixa-do-palito">
+        <div class="palito-1 base-palito"></div>
+        <div class="palito-2 base-palito"></div>
+        <div class="palito-3 base-palito"></div>
+    </div>
+    <div class="caixa-do-triangulo">
+        <div class="triangulo-1 base-triangulo"></div>
+        <div class="triangulo-2 base-triangulo"></div>
+        <div class="triangulo-3 base-triangulo"></div>
+    </div>
 </body>
